--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,51 +1,175 @@
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap');
-
-/* VARIABLES */
+/************* VARIABLES *************/
 :root {
-    /* PRIMARY COLORS */
-    --dark-cyan: hsl(158, 36%,37%);
-    --cream: hsl(30, 38%, 92%);
-    /* NEUTRAL COLORS */
-    --dark-blue: hsl(212, 21%, 14%);
-    --gray-blue: hsl(228, 12%, 48%);
-    --white: hsl(0, 0%, 100%);
-    /* TYPOGRAPHY */
-    --small-fonts: 14px;
-    /* LAYOUT */
-    --mobile: 375px;
-    --desktop: 1440px;
+  /* PRIMARY COLORS */
+  --dark-cyan: hsl(158, 36%, 37%);
+  --darker-cyan: hsl(158, 36%, 20%);
+  --cream: hsl(30, 38%, 92%);
+  /* NEUTRAL COLORS */
+  --dark-blue: hsl(212, 21%, 14%);
+  --gray-blue: hsl(228, 12%, 48%);
+  --white: hsl(0, 0%, 100%);
+  /* TYPOGRAPHY */
+  --ff-regular: 'Montserrat', sans-serif;
+  --ff-accent: 'Fraunces', serif;
+  --fw-regular: 500;
+  --fw-bold: 700;
+  /* LAYOUT */
+  --mobile: 375px;
+  --desktop: 1440px;
 }
 
-*, ::before, ::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+/******************* CSS RESET *******************/
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
+  box-sizing: border-box;
 }
-
+/*
+  2. Remove default margin
+*/
+* {
+  margin: 0;
+}
+/*
+  3. Allow percentage-based heights in the application
+*/
+html, body {
+  height: 100%;
+}
+/*
+  Typographic tweaks!
+  4. Add accessible line-height
+  5. Improve text rendering
+*/
 body {
-    max-width: 100vw;
+  line-height: 1.7;
+  -webkit-font-smoothing: antialiased;
+}
+/*
+  6. Improve media defaults
+*/
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+/*
+  7. Remove built-in form typography styles
+*/
+input, button, textarea, select {
+  font: inherit;
+}
+/*
+  8. Avoid text overflows
+*/
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
 }
 
-main {
-    padding: 20px 10px;
+h1, h2, h3 {
+  line-height: 1;
+}
+/*
+  9. Create a root stacking context
+*/
+#root, #__next {
+  isolation: isolate;
+}
+/* ****************************************** */
+
+/* GENERAL STYLING */
+body {
+  font-family: var(--ff-regular);
+  font-weight: var(--fw-regular);
+  color: var(--gray-blue);
+  font-size: .875rem;
+  background: var(--cream);
+  display: grid;
+  min-height: 100vh;
+  place-content: center;
+  margin: 1rem;
 }
 
-/* MOBILE LAYOUT */
-img {
-    width: 100%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+/* UTILITIES */
+.flex-group {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
-.prod__prices {
-    display: flex;
-    gap: 20px;
+/* BUTTON */
+.button {
+  cursor: pointer;
+  padding: 0.75rem 1.5rem;
+  border: 0;
+  text-decoration: none;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.75rem;
+  background-color: var(--dark-cyan);
+  color: var(--white);
+  font-weight: var(--fw-bold);
+  border-radius: 0.5rem;
 }
 
-.btn {
-    min-width: 100%;
+.button[data-icon="icon-cart"]::before {
+  content: "";
+  background-image: url("../images/icon-cart.svg");
+  width: 15px;
+  height: 16px;
 }
 
-button {
-    width: 100%;
+.button:is(:hover, :focus) {
+  background: var(--darker-cyan);
+}
+
+/* PRODUCT */
+.prod__container {
+  --content-padding: 1.5rem;
+  --content-spacing: 1rem;
+  display: grid;
+  max-width: 400px;
+  background: var(--white);
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+@media (min-width: 600px) {
+  .prod__container {
+    --content-padding: 2rem;
+    grid-template-columns: 1fr 1fr;
+    max-width: 600px;
+  }
+}
+
+.prod__content {
+  display: grid;
+  gap: var(--content-spacing);
+  padding: var(--content-padding);
+}
+
+.prod__category {
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  letter-spacing: 5px;
+}
+
+.prod__title {
+  font-size: 2rem;
+  font-family: var(--ff-accent);
+  font-weight: var(--fw-bold);
+  color: var(--dark-blue);
+}
+
+.prod__description span {
+  text-transform: uppercase;
+}
+
+.prod__price {
+  font-size: 2rem;
+  font-family: var(--ff-accent);
+  font-weight: var(--fw-bold);
+  color: var(--dark-cyan);
 }
